--- a/hanz.html
+++ b/hanz.html
@@ -12,7 +12,7 @@
     <div class="box">
         <div class="container">
             <div class="top-header">
-                <h1>SHOP EXPRESS 38</h1>
+                <h1>Land EXPRESS 38</h1>
                 <p>Welcome To Shop Express 38</p>
                 <span>Have an account?</span>
                 <header>Login</header>
