Updated App Name

--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <div class="items">
-        <div class="logo">SHOP EXPRESS 38</div>
+        <div class="logo">ALI EXPRESS 38</div>
         <ul class="menu">
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
